[package]
name = "rust_reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.137"
reqwest = {version = "0.11.10", features = ["json"] }
serde_json = "1.0.81"
serde_derive = "1.0.137"
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime