[package]
name = "spawntest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
actix-rt = "2.8.0"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
lazy_static = "1.4.0"